# tree-sitter-pipe

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package.json  push-notif-dependency.txt  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-tspipe.pc.in
bindings/c/tree_sitter/: tree-sitter-tspipe.h
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_tspipe/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterTspipeTests/: TreeSitterTspipeTests.swift
