[package]
name = "tree-sitter-tspipe"
description = "A Tree-sitter parser that maps out your hierarchical structures using pipeline (|) characters. It's giving peak organization and clean data reads."
version = "0.1.0"
authors = ["Hanvim <marifatalhanif@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "tspipe"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/marifat0/tree-sitter-pipe"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "/LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.10"
