[build-system]
requires = ["setuptools>=62.4.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tree-sitter-tspipe"
description = "A Tree-sitter parser that maps out your hierarchical structures using pipeline (|) characters. It's giving peak organization and clean data reads."
version = "0.1.0"
keywords = ["incremental", "parsing", "tree-sitter", "tspipe"]
classifiers = [
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Compilers",
  "Topic :: Text Processing :: Linguistic",
  "Typing :: Typed",
]
authors = [{ name = "Hanvim", email = "marifatalhanif@gmail.com" }]
requires-python = ">=3.10"
license.text = "MIT"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/marifat0/tree-sitter-pipe"

[project.optional-dependencies]
core = ["tree-sitter~=0.24"]

[tool.cibuildwheel]
build = "cp310-*"
build-frontend = "build"
